--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Bookstore app",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --progress --colors --config ./webpack.config.js",
+    "prod-build": "cross-env NODE_ENV=production  webpack --config ./webpack/webpack.dev.config.js --progress --colors",
+    "dev-serve": "cross-env NODE_ENV=development webpack-dev-server --config ./webpack/webpack.dev.config.js --progress --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,7 +24,9 @@
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "redux-devtools-extension": "^2.13.2"
+    "redux-actions": "^2.2.1",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.3",
@@ -32,16 +35,25 @@
     "@types/react-dom": "^16.0.3",
     "@types/react-hot-loader": "^3.0.5",
     "@types/react-redux": "^5.0.14",
+    "@types/redux-actions": "^2.2.3",
     "@types/webpack": "^3.8.1",
     "@types/webpack-dev-server": "^2.9.2",
     "awesome-typescript-loader": "^3.4.0",
+    "cross-env": "^5.1.1",
+    "file-loader": "^1.1.5",
+    "html-loader": "^0.5.1",
+    "html-webpack-plugin": "^2.30.1",
+    "json-loader": "^0.5.7",
+    "node-sass": "^4.7.2",
     "react-hot-loader": "^3.1.3",
+    "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.3",
     "tslint": "^5.8.0",
     "tslint-language-service": "^0.9.7",
     "tslint-loader": "^3.5.3",
     "tslint-react": "^3.2.0",
     "typescript": "^2.6.1",
+    "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
   }
